[wl-65] fix for horizontal scroll on mobile

--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -7,7 +7,6 @@ body {
   margin: 0;
   overflow-y: scroll;
   overflow-x: hidden;
-  min-width: $viewport-xs-w;
 
   &.lock {
     overflow: hidden;
